# SDCI

./: .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yaml  pyoxidizer.bzl  pyoxidizer_old.bzl  pyproject.toml
.github/workflows/: ci-cd.yml
docs/manual/: file-upload.md  systemd-setup.md  version.md
docs/superpowers/specs/: 2026-05-31-file-upload-design.md  2026-06-14-systemd-setup-design.md  2026-06-20-run-as-user-alias-design.md  2026-06-20-uploads-dir-and-version-design.md
src/: log_conf.yaml  server.py
src/sdci/: __main__.py  cli.py  client.py  client_service.py  command.py  runner.py  schemas.py  server.py  server_runner.py  server_setup.py  settings.py
src/tasks/: demo.sh  test_job_1.sh
tests/: test_client_cli.py  test_client_service.py  test_file_uploader.py  test_server_cli.py  test_server_runner.py  test_server_setup.py
