[project]
name = "sdci"
version = "0.1.0"
description = "SDCI - Sistema de Deploy Continuo Integrado - Integrated Continuous Deployment System - Sidecar Micro CD"
readme = "README.md"
authors = [
    { name = "Jonhnatha Trigueiro", email = "joepreludian@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "click>=8.2.1",
    "fastapi[standard]>=0.116.1",
    "requests>=2.32.4",
]

[project.scripts]
sdci-cli = "sdci.command:cli"

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"
